add warning window & db connection

--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -16,6 +16,22 @@
   align-items: center;
 }
 
+.login {
+  font-weight: 500;
+  font-size: 14px;
+  border-radius: 100px;
+  padding: 10px 20px 10px 20px;
+  border: 1px #E2E2E2 solid;
+  background: white;
+  outline: 0;
+  cursor: pointer;
+  transition-duration: .3s;
+}
+.login:hover {
+  background: #E2E2E2;
+  transition-duration: .3s;
+}
+
 .logo {
   width: 126px;
 }
