--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -8,7 +8,7 @@
 }
 
 .nav {
-  width: 75vw;
+  width: 1100px;
   height: 90px;
   background: white;
   display: flex;
@@ -55,6 +55,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.more_btn {
+  display: none;
 }
 
 .icon {
@@ -124,4 +128,67 @@
 .window_menu:hover {
   color: black;
   cursor: pointer;
+}
+
+@media (max-width: 1200px) {
+  .nav {
+    height: 81px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo {
+    margin-left: 20px;
+    width: 140px;
+  }
+  
+  .profile {
+    margin-right: 20px;
+  }
+
+  .menu {
+    display: none;
+  }
+
+
+  .profile_btn {
+    display: none;
+  }
+
+  .icon {
+    width: 24px;
+    height: 24px;
+    margin-left: 12px;
+    margin-right: 12px;
+  }
+
+  .more_btn {
+    display: block;
+    margin-left: 12px;
+  }
+}
+
+@media (max-width: 800px) {
+  .nav {
+    height: 56px;
+    border-bottom: 1px #cacaca solid;
+  }
+
+  .logo {
+    width: 90px;
+  }
+
+  .icon {
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .more_btn {
+    width: 20px;
+    height: 20px;
+    margin-left: 8px;
+  }
 }
